--- a/QuanLyHocSinh/templates/Administrator/edit_subject.html
+++ b/QuanLyHocSinh/templates/Administrator/edit_subject.html
@@ -17,7 +17,7 @@ Chỉnh sửa môn học
         <div class="mb-3">
             <label for="subject_name" class="form-label">Tên Môn Học</label>
             <input type="text" id="subject_name" name="subject_name" class="form-control"
-                   value="{{ subject.subjectName }}" required>
+                   value="{{ subject.subjectName }}" required autocomplete="off">
         </div>
         <button type="submit" class="btn btn-primary">Cập nhật</button>
     </form>
