--- a/QuanLyHocSinh/templates/Administrator/base.html
+++ b/QuanLyHocSinh/templates/Administrator/base.html
@@ -31,9 +31,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('subject_mng')}}">Quản lý môn học</a>
                     </li>
-                     <li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('user_mng')}}">Quản lý người dùng</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('teacher_mng')}}">Quản lý giáo viên</a>
+                    </li>
+
                 </ul>
                   <!-- Chuyển Đăng xuất qua phải -->
                 <ul class="navbar-nav ms-auto">
