--- a/QuanLyHocSinh/templates/Teacher/base.html
+++ b/QuanLyHocSinh/templates/Teacher/base.html
@@ -22,7 +22,7 @@
             <div class="collapse navbar-collapse" id="mynavbar">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{url_for('report')}}">Nhập điểm</a>
+                        <a class="nav-link" href="{{url_for('enter_point')}}">Nhập điểm</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('rule')}}">Xuất điểm</a>
