--- a/QuanLyHocSinh/templates/Administrator/CreateUser.html
+++ b/QuanLyHocSinh/templates/Administrator/CreateUser.html
@@ -86,6 +86,7 @@ Tạo tài khoản người dùng
             <select id="role" name="role" class="form-select" required>
                 <option value="Staff">Staff</option>
                 <option value="Teacher">Teacher</option>
+                <option value="Administrator">Administrator</option>
             </select>
         </div>
 
@@ -99,6 +100,11 @@ Tạo tài khoản người dùng
             <label for="yearExperience" class="form-label">Số năm kinh nghiệm</label>
             <input type="number" id="yearExperience" name="yearExperience" class="form-control" min="0"
                    autocomplete="off">
+        </div>
+
+         <div class="mb-3" id="admin-role" style="display: none;">
+            <label for="adminRole" class="form-label">Vai trò Admin</label>
+            <input type="text" id="adminRole" name="adminRole" class="form-control" autocomplete="off">
         </div>
 
         <button type="submit" class="btn btn-primary">Tạo tài khoản</button>
