--- a/QuanLyHocSinh/static/css/Administrator/Login.css
+++ b/QuanLyHocSinh/static/css/Administrator/Login.css
@@ -10,7 +10,7 @@ body {
 }
 
 form {
-    background-color: #ffffff; /* Màu nền cho form */
+    background: #ffffffd1;
 }
 
 h2 {
@@ -25,3 +25,4 @@ h2 {
 .btn-primary:hover {
     background-color: #0056b3; /* Màu khi hover */
 }
+
