--- a/QuanLyHocSinh/templates/Administrator/base.html
+++ b/QuanLyHocSinh/templates/Administrator/base.html
@@ -42,7 +42,7 @@
                   <!-- Chuyển Đăng xuất qua phải -->
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link logout-btn" href="javascript:void(0)">Đăng xuất</a>
+                        <a class="nav-link logout-btn" href="{{url_for('logout')}}">Đăng xuất</a>
                     </li>
                 </ul>
             </div>
