--- a/QuanLyHocSinh/templates/index.html
+++ b/QuanLyHocSinh/templates/index.html
@@ -11,17 +11,19 @@
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-6">
+        <div class="col-md-6 login-div">
             <form class="mt-5 p-4 border rounded shadow" action="/" method="POST">
                 <h2 class="text-center">Đăng Nhập</h2>
-                 {% with messages = get_flashed_messages() %}
-                    {% if messages %}
-                        <div class="alert alert-danger" role="alert">
-                            {% for message in messages %}
-                                {{ message }}
-                            {% endfor %}
-                        </div>
-                    {% endif %}
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div class="container mt-3">
+                    {% for category, message in messages %}
+                    <div class="alert alert-{{ category }}" role="alert">
+                        {{ message }}
+                    </div>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 {% endwith %}
                 <div class="form-floating mb-3 mt-3">
                     <input type="text" class="form-control" id="username" placeholder="Nhập tên tài khoản"
@@ -34,7 +36,12 @@
                            name="password" required autocomplete="off">
                     <label for="password">Mật khẩu</label>
                 </div>
+
                 <button type="submit" class="btn btn-primary w-100">Đăng Nhập</button>
+                <!-- Dòng "Quên mật khẩu?" -->
+                <div class="text-center mt-3">
+                    <a href="{{ url_for('forgot_password', step=1) }}" class="text-decoration-none">Quên mật khẩu?</a>
+                </div>
             </form>
         </div>
     </div>
